Implement resource and resource manager. Add resource unit tests.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -17,6 +17,14 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "from mynd.image import ImageType\n",
+    "\n",
+    "from mynd.utils.filesystem import (\n",
+    "    list_directory,\n",
+    "    create_resource,\n",
+    "    Resource,\n",
+    "    ResourceManager,\n",
+    ")\n",
     "from mynd.utils.log import logger\n",
     "from mynd.utils.result import Ok, Err, Result\n",
     "\n",
@@ -24,7 +32,55 @@
     "def main() -> None:\n",
     "    \"\"\"Main entrypoint.\"\"\"\n",
     "\n",
+    "    DATADIR: Path = Path(\"/home/martin/data\")\n",
+    "\n",
+    "    image_directories: dict[str, Path] = {\n",
+    "        ImageType.COLOR: DATADIR\n",
+    "        / Path(\"acfr_images_preprocessed/r23685bc_20100605_021022_debayered\"),\n",
+    "        ImageType.RANGE: DATADIR\n",
+    "        / Path(\"acfr_stereo_ranges/r23685bc_20100605_021022_ranges\"),\n",
+    "        ImageType.NORMAL: DATADIR\n",
+    "        / Path(\"acfr_stereo_normals/r23685bc_20100605_021022_normals\"),\n",
+    "    }\n",
+    "\n",
+    "    IMAGE_PATTERN: str = \"*.tiff\"\n",
+    "\n",
+    "    image_files: dict[ImageType, list[Path]] = {\n",
+    "        image_type: list_directory(directory, IMAGE_PATTERN)\n",
+    "        for image_type, directory in image_directories.items()\n",
+    "    }\n",
+    "\n",
+    "    for image_type, files in image_files.items():\n",
+    "        logger.info(f\"Image type: {image_type}, files: {len(files)}\")\n",
+    "\n",
     "    # NOTE: Write your code here\n",
+    "    resource_manager: ResourceManager = ResourceManager()\n",
+    "    for image_type, files in image_files.items():\n",
+    "        resources: list[Resource] = [\n",
+    "            create_resource(path) for path in files if path.exists()\n",
+    "        ]\n",
+    "\n",
+    "        resource_manager.add_resources(\n",
+    "            resources, tags=[\"image\", str(image_type)]\n",
+    "        )\n",
+    "\n",
+    "    query_results: dict[str, list[Resource]] = {\n",
+    "        \"color\": resource_manager.query_tags([\"image\", \"color\"]),\n",
+    "        \"range\": resource_manager.query_tags([\"image\", \"range\"]),\n",
+    "        \"normal\": resource_manager.query_tags([\"image\", \"normal\"]),\n",
+    "    }\n",
+    "\n",
+    "    for category, resources in query_results.items():\n",
+    "        file_count: int = len(\n",
+    "            [resource for resource in resources if resource.is_file()]\n",
+    "        )\n",
+    "        dir_count: int = len(\n",
+    "            [resource for resource in resources if resource.is_directory()]\n",
+    "        )\n",
+    "\n",
+    "        logger.info(f\"Category: {category}, resources: {len(resources)}\")\n",
+    "        logger.info(f\" - Files:        {file_count}\")\n",
+    "        logger.info(f\" - Directories:  {dir_count}\")\n",
     "\n",
     "\n",
     "# INVOKE MAIN\n",
