--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,14 +10,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-10-09 22:25:17.233\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mCategory: color, resources: 5458\u001b[0m\n",
+      "\u001b[32m2024-10-09 22:25:17.233\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m - Files:        5458\u001b[0m\n",
+      "\u001b[32m2024-10-09 22:25:17.234\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
+      "\u001b[32m2024-10-09 22:25:17.257\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mCategory: range, resources: 5456\u001b[0m\n",
+      "\u001b[32m2024-10-09 22:25:17.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m - Files:        5456\u001b[0m\n",
+      "\u001b[32m2024-10-09 22:25:17.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
+      "\u001b[32m2024-10-09 22:25:17.282\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mCategory: normal, resources: 5456\u001b[0m\n",
+      "\u001b[32m2024-10-09 22:25:17.283\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m - Files:        5456\u001b[0m\n",
+      "\u001b[32m2024-10-09 22:25:17.284\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
+      "\u001b[32m2024-10-09 22:25:17.441\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m193\u001b[0m - \u001b[1mloaders: <class 'list'>\u001b[0m\n",
+      "loading images...: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5458/5458 [01:20<00:00, 67.81it/s]\n"
+     ]
+    }
+   ],
    "source": [
+    "from collections.abc import Mapping\n",
+    "from functools import partial\n",
     "from pathlib import Path\n",
+    "from typing import Callable, TypeVar\n",
     "\n",
-    "from mynd.image import ImageType\n",
+    "import tqdm\n",
+    "\n",
+    "from mynd.image import ImageType, ImageComposite, ImageCompositeLoader\n",
+    "from mynd.io import read_image\n",
     "\n",
     "from mynd.utils.filesystem import (\n",
     "    list_directory,\n",
@@ -29,47 +53,140 @@
     "from mynd.utils.result import Ok, Err, Result\n",
     "\n",
     "\n",
-    "def main() -> None:\n",
-    "    \"\"\"Main entrypoint.\"\"\"\n",
+    "IMAGE_PATTERN: str = \"*.tiff\"\n",
     "\n",
-    "    DATADIR: Path = Path(\"/home/martin/data\")\n",
+    "Resources = list[Resource]\n",
     "\n",
-    "    image_directories: dict[str, Path] = {\n",
-    "        ImageType.COLOR: DATADIR\n",
-    "        / Path(\"acfr_images_preprocessed/r23685bc_20100605_021022_debayered\"),\n",
-    "        ImageType.RANGE: DATADIR\n",
-    "        / Path(\"acfr_stereo_ranges/r23685bc_20100605_021022_ranges\"),\n",
-    "        ImageType.NORMAL: DATADIR\n",
-    "        / Path(\"acfr_stereo_normals/r23685bc_20100605_021022_normals\"),\n",
-    "    }\n",
     "\n",
-    "    IMAGE_PATTERN: str = \"*.tiff\"\n",
+    "def collect_image_resources(directories: dict, tags: dict) -> ResourceManager:\n",
+    "    \"\"\"Collects image resources and adds them to a manager.\"\"\"\n",
+    "    image_manager: ResourceManager = ResourceManager()\n",
     "\n",
+    "    # Find file handles\n",
     "    image_files: dict[ImageType, list[Path]] = {\n",
     "        image_type: list_directory(directory, IMAGE_PATTERN)\n",
-    "        for image_type, directory in image_directories.items()\n",
+    "        for image_type, directory in directories.items()\n",
     "    }\n",
     "\n",
+    "    # Create resources out of the file handles\n",
     "    for image_type, files in image_files.items():\n",
-    "        logger.info(f\"Image type: {image_type}, files: {len(files)}\")\n",
-    "\n",
-    "    # NOTE: Write your code here\n",
-    "    resource_manager: ResourceManager = ResourceManager()\n",
-    "    for image_type, files in image_files.items():\n",
-    "        resources: list[Resource] = [\n",
+    "        resources: Resources = [\n",
     "            create_resource(path) for path in files if path.exists()\n",
     "        ]\n",
     "\n",
-    "        resource_manager.add_resources(\n",
-    "            resources, tags=[\"image\", str(image_type)]\n",
-    "        )\n",
+    "        if len(resources) == 0:\n",
+    "            logger.warning(f\"no resources for type: {image_type}\")\n",
     "\n",
-    "    query_results: dict[str, list[Resource]] = {\n",
-    "        \"color\": resource_manager.query_tags([\"image\", \"color\"]),\n",
-    "        \"range\": resource_manager.query_tags([\"image\", \"range\"]),\n",
-    "        \"normal\": resource_manager.query_tags([\"image\", \"normal\"]),\n",
-    "    }\n",
+    "        image_manager.add_resources(resources, tags=tags.get(image_type))\n",
     "\n",
+    "    return image_manager\n",
+    "\n",
+    "\n",
+    "T: TypeVar = TypeVar(\"T\")\n",
+    "\n",
+    "ComponentGroups = Mapping[T, Resources]\n",
+    "ComponentMatch = Mapping[T, Resource]\n",
+    "\n",
+    "\n",
+    "def match_resources_by_stem(\n",
+    "    component_groups: ComponentGroups,\n",
+    ") -> list[ComponentMatch]:\n",
+    "    \"\"\"Matches resources of different types based on common stems.\"\"\"\n",
+    "    matches: dict[str, ComponentMatch] = dict()\n",
+    "    for key, resources in component_groups.items():\n",
+    "\n",
+    "        for resource in resources:\n",
+    "            if resource.stem not in matches:\n",
+    "                matches[resource.stem] = dict()\n",
+    "\n",
+    "            matches[resource.stem][key] = resource\n",
+    "\n",
+    "    matches: list[ComponentMatch] = list(matches.values())\n",
+    "    return matches\n",
+    "\n",
+    "\n",
+    "def check_match_has_all_components(\n",
+    "    components: ComponentMatch,\n",
+    "    required_keys: set[T],\n",
+    ") -> bool:\n",
+    "    \"\"\"Check if image matches has the required components.\"\"\"\n",
+    "    return set(components.keys()) == required_keys\n",
+    "\n",
+    "\n",
+    "def create_resource_matcher(\n",
+    "    matcher: Callable[\n",
+    "        [ComponentGroups], dict[str, ComponentMatch]\n",
+    "    ] = match_resources_by_stem,\n",
+    "    validator: Callable[[ComponentMatch], bool] = lambda x: True,\n",
+    ") -> Callable:\n",
+    "    \"\"\"Creates a resource matcher.\"\"\"\n",
+    "\n",
+    "    def match_resources(\n",
+    "        component_groups: ComponentGroups,\n",
+    "    ) -> list[ComponentMatch]:\n",
+    "        \"\"\"Matches resources from different groups.\"\"\"\n",
+    "        component_matches: list[ComponentMatch] = matcher(component_groups)\n",
+    "        valid_matches: list[ComponentMatch] = [\n",
+    "            components\n",
+    "            for components in component_matches\n",
+    "            if validator(components)\n",
+    "        ]\n",
+    "        return valid_matches\n",
+    "\n",
+    "    return match_resources\n",
+    "\n",
+    "\n",
+    "def create_composite_loader(\n",
+    "    label: str, resources: Mapping[ImageType, Resource]\n",
+    ") -> ImageCompositeLoader:\n",
+    "    \"\"\"Creates a composite loader\"\"\"\n",
+    "\n",
+    "    def load_image_composite() -> tuple[str, ImageComposite]:\n",
+    "        \"\"\"Loads an image composite from resources.\"\"\"\n",
+    "        components: dict[ImageType, Image] = {\n",
+    "            image_type: read_image(resource.handle).unwrap()\n",
+    "            for image_type, resource in resources.items()\n",
+    "        }\n",
+    "        return label, ImageComposite(components)\n",
+    "\n",
+    "    return load_image_composite\n",
+    "\n",
+    "\n",
+    "def create_image_composite_builder(\n",
+    "    loader_factory: Callable[\n",
+    "        [str, ComponentMatch], ImageCompositeLoader\n",
+    "    ] = create_composite_loader,\n",
+    ") -> Callable:\n",
+    "    \"\"\"Creates a builder method for image composite loaders.\"\"\"\n",
+    "\n",
+    "    def build_image_composite_loaders(\n",
+    "        component_matches: list[Mapping[ImageType, Resource]],\n",
+    "    ) -> list[ImageCompositeLoader]:\n",
+    "        \"\"\"Builds image composite loaders from a collection of image components.\"\"\"\n",
+    "\n",
+    "        labelled_composites: dict[str, Mapping] = dict()\n",
+    "        for components in component_matches:\n",
+    "            if ImageType.COLOR in components:\n",
+    "                label: str = components.get(ImageType.COLOR).stem\n",
+    "            else:\n",
+    "                label: str = [components.values()][0].stem\n",
+    "\n",
+    "            labelled_composites[label] = components\n",
+    "\n",
+    "        loaders: list[ImageCompositeLoader] = [\n",
+    "            loader_factory(label, components)\n",
+    "            for label, components in labelled_composites.items()\n",
+    "        ]\n",
+    "\n",
+    "        return loaders\n",
+    "\n",
+    "    return build_image_composite_loaders\n",
+    "\n",
+    "\n",
+    "def log_image_queries(\n",
+    "    query_results: Mapping[ImageType, list[Resource]]\n",
+    ") -> None:\n",
+    "    \"\"\"Log some image query statistics.\"\"\"\n",
     "    for category, resources in query_results.items():\n",
     "        file_count: int = len(\n",
     "            [resource for resource in resources if resource.is_file()]\n",
@@ -81,6 +198,54 @@
     "        logger.info(f\"Category: {category}, resources: {len(resources)}\")\n",
     "        logger.info(f\" - Files:        {file_count}\")\n",
     "        logger.info(f\" - Directories:  {dir_count}\")\n",
+    "\n",
+    "\n",
+    "def main() -> None:\n",
+    "    \"\"\"Main entrypoint.\"\"\"\n",
+    "\n",
+    "    DATADIR: Path = Path(\"/home/martin/data\")\n",
+    "\n",
+    "    directories: dict[str, Path] = {\n",
+    "        ImageType.COLOR: DATADIR\n",
+    "        / Path(\"acfr_images_debayered/r23685bc_20100605_021022_debayered\"),\n",
+    "        ImageType.RANGE: DATADIR\n",
+    "        / Path(\"acfr_stereo_ranges/r23685bc_20100605_021022_ranges\"),\n",
+    "        ImageType.NORMAL: DATADIR\n",
+    "        / Path(\"acfr_stereo_normals/r23685bc_20100605_021022_normals\"),\n",
+    "    }\n",
+    "\n",
+    "    tags: dict[ImageType, list[str]] = {\n",
+    "        ImageType.COLOR: [\"image\", \"color\"],\n",
+    "        ImageType.RANGE: [\"image\", \"range\"],\n",
+    "        ImageType.NORMAL: [\"image\", \"normal\"],\n",
+    "    }\n",
+    "\n",
+    "    image_types: list[ImageType] = list(directories.keys())\n",
+    "\n",
+    "    # Step 1 - Collect image resources\n",
+    "    image_manager: ResourceManager = collect_image_resources(directories, tags)\n",
+    "\n",
+    "    # Step 2 - Retrieve image resources by type\n",
+    "    query_results: dict[ImageType, list[Resource]] = {\n",
+    "        image_type: image_manager.query_tags(tags.get(image_type))\n",
+    "        for image_type in image_types\n",
+    "    }\n",
+    "\n",
+    "    log_image_queries(query_results)\n",
+    "\n",
+    "    # Step 3 - Match image resources to create composites\n",
+    "    matcher = create_resource_matcher()\n",
+    "    matches: list[ComponentMatch] = matcher(query_results)\n",
+    "\n",
+    "    # Step 4 - Create loaders from the matched resources\n",
+    "    builder = create_image_composite_builder()\n",
+    "    loaders: list[tuple[str, ImageCompositeLoader]] = builder(matches)\n",
+    "\n",
+    "    logger.info(f\"loaders: {type(loaders)}\")\n",
+    "\n",
+    "    for loader in tqdm.tqdm(loaders, desc=\"loading images...\"):\n",
+    "        label, composite = loader()\n",
+    "        # composite: ImageComposite = loader()\n",
     "\n",
     "\n",
     "# INVOKE MAIN\n",
