Add generic composite builder. Add resource matcher to filesystem.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,25 +10,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-10-09 22:25:17.233\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mCategory: color, resources: 5458\u001b[0m\n",
-      "\u001b[32m2024-10-09 22:25:17.233\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m - Files:        5458\u001b[0m\n",
-      "\u001b[32m2024-10-09 22:25:17.234\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
-      "\u001b[32m2024-10-09 22:25:17.257\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mCategory: range, resources: 5456\u001b[0m\n",
-      "\u001b[32m2024-10-09 22:25:17.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m - Files:        5456\u001b[0m\n",
-      "\u001b[32m2024-10-09 22:25:17.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
-      "\u001b[32m2024-10-09 22:25:17.282\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mCategory: normal, resources: 5456\u001b[0m\n",
-      "\u001b[32m2024-10-09 22:25:17.283\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m148\u001b[0m - \u001b[1m - Files:        5456\u001b[0m\n",
-      "\u001b[32m2024-10-09 22:25:17.284\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
-      "\u001b[32m2024-10-09 22:25:17.441\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m193\u001b[0m - \u001b[1mloaders: <class 'list'>\u001b[0m\n",
-      "loading images...: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5458/5458 [01:20<00:00, 67.81it/s]\n"
+      "/home/martin/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/kornia/feature/lightglue.py:44: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.\n",
+      "  @torch.cuda.amp.custom_fwd(cast_inputs=torch.float32)\n",
+      "\u001b[32m2024-10-10 15:01:32.682\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1mCategory: color, resources: 5458\u001b[0m\n",
+      "\u001b[32m2024-10-10 15:01:32.683\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m96\u001b[0m - \u001b[1m - Files:        5458\u001b[0m\n",
+      "\u001b[32m2024-10-10 15:01:32.684\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m97\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
+      "\u001b[32m2024-10-10 15:01:32.725\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1mCategory: range, resources: 5456\u001b[0m\n",
+      "\u001b[32m2024-10-10 15:01:32.726\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m96\u001b[0m - \u001b[1m - Files:        5456\u001b[0m\n",
+      "\u001b[32m2024-10-10 15:01:32.726\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m97\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
+      "\u001b[32m2024-10-10 15:01:32.778\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1mCategory: normal, resources: 5456\u001b[0m\n",
+      "\u001b[32m2024-10-10 15:01:32.779\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m96\u001b[0m - \u001b[1m - Files:        5456\u001b[0m\n",
+      "\u001b[32m2024-10-10 15:01:32.780\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m97\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
+      "\u001b[32m2024-10-10 15:01:32.827\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1mloaders: <class 'dict'>\u001b[0m\n",
+      "loading images...: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5458/5458 [01:20<00:00, 67.79it/s]\n"
      ]
     }
    ],
@@ -40,14 +51,21 @@
     "\n",
     "import tqdm\n",
     "\n",
-    "from mynd.image import ImageType, ImageComposite, ImageCompositeLoader\n",
+    "from mynd.image import (\n",
+    "    Image,\n",
+    "    ImageType,\n",
+    "    ImageComposite,\n",
+    "    ImageCompositeLoader,\n",
+    ")\n",
     "from mynd.io import read_image\n",
     "\n",
+    "from mynd.utils.composition import create_composite_builder\n",
     "from mynd.utils.filesystem import (\n",
     "    list_directory,\n",
     "    create_resource,\n",
     "    Resource,\n",
     "    ResourceManager,\n",
+    "    create_resource_matcher,\n",
     ")\n",
     "from mynd.utils.log import logger\n",
     "from mynd.utils.result import Ok, Err, Result\n",
@@ -82,105 +100,31 @@
     "    return image_manager\n",
     "\n",
     "\n",
-    "T: TypeVar = TypeVar(\"T\")\n",
-    "\n",
-    "ComponentGroups = Mapping[T, Resources]\n",
-    "ComponentMatch = Mapping[T, Resource]\n",
-    "\n",
-    "\n",
-    "def match_resources_by_stem(\n",
-    "    component_groups: ComponentGroups,\n",
-    ") -> list[ComponentMatch]:\n",
-    "    \"\"\"Matches resources of different types based on common stems.\"\"\"\n",
-    "    matches: dict[str, ComponentMatch] = dict()\n",
-    "    for key, resources in component_groups.items():\n",
-    "\n",
-    "        for resource in resources:\n",
-    "            if resource.stem not in matches:\n",
-    "                matches[resource.stem] = dict()\n",
-    "\n",
-    "            matches[resource.stem][key] = resource\n",
-    "\n",
-    "    matches: list[ComponentMatch] = list(matches.values())\n",
-    "    return matches\n",
-    "\n",
-    "\n",
-    "def check_match_has_all_components(\n",
-    "    components: ComponentMatch,\n",
-    "    required_keys: set[T],\n",
-    ") -> bool:\n",
-    "    \"\"\"Check if image matches has the required components.\"\"\"\n",
-    "    return set(components.keys()) == required_keys\n",
-    "\n",
-    "\n",
-    "def create_resource_matcher(\n",
-    "    matcher: Callable[\n",
-    "        [ComponentGroups], dict[str, ComponentMatch]\n",
-    "    ] = match_resources_by_stem,\n",
-    "    validator: Callable[[ComponentMatch], bool] = lambda x: True,\n",
-    ") -> Callable:\n",
-    "    \"\"\"Creates a resource matcher.\"\"\"\n",
-    "\n",
-    "    def match_resources(\n",
-    "        component_groups: ComponentGroups,\n",
-    "    ) -> list[ComponentMatch]:\n",
-    "        \"\"\"Matches resources from different groups.\"\"\"\n",
-    "        component_matches: list[ComponentMatch] = matcher(component_groups)\n",
-    "        valid_matches: list[ComponentMatch] = [\n",
-    "            components\n",
-    "            for components in component_matches\n",
-    "            if validator(components)\n",
-    "        ]\n",
-    "        return valid_matches\n",
-    "\n",
-    "    return match_resources\n",
-    "\n",
-    "\n",
-    "def create_composite_loader(\n",
-    "    label: str, resources: Mapping[ImageType, Resource]\n",
+    "# NOTE: Defines how components are loaded\n",
+    "def create_image_composite_loader(\n",
+    "    components: dict[ImageType, Resource]\n",
     ") -> ImageCompositeLoader:\n",
-    "    \"\"\"Creates a composite loader\"\"\"\n",
+    "    \"\"\"Creates an image composite loader from component sources.\"\"\"\n",
     "\n",
-    "    def load_image_composite() -> tuple[str, ImageComposite]:\n",
+    "    def load_image_composite() -> ImageComposite:\n",
     "        \"\"\"Loads an image composite from resources.\"\"\"\n",
-    "        components: dict[ImageType, Image] = {\n",
+    "        image_components: dict[ImageType, Image] = {\n",
     "            image_type: read_image(resource.handle).unwrap()\n",
-    "            for image_type, resource in resources.items()\n",
+    "            for image_type, resource in components.items()\n",
     "        }\n",
-    "        return label, ImageComposite(components)\n",
+    "        return ImageComposite(image_components)\n",
     "\n",
     "    return load_image_composite\n",
     "\n",
     "\n",
-    "def create_image_composite_builder(\n",
-    "    loader_factory: Callable[\n",
-    "        [str, ComponentMatch], ImageCompositeLoader\n",
-    "    ] = create_composite_loader,\n",
-    ") -> Callable:\n",
-    "    \"\"\"Creates a builder method for image composite loaders.\"\"\"\n",
-    "\n",
-    "    def build_image_composite_loaders(\n",
-    "        component_matches: list[Mapping[ImageType, Resource]],\n",
-    "    ) -> list[ImageCompositeLoader]:\n",
-    "        \"\"\"Builds image composite loaders from a collection of image components.\"\"\"\n",
-    "\n",
-    "        labelled_composites: dict[str, Mapping] = dict()\n",
-    "        for components in component_matches:\n",
-    "            if ImageType.COLOR in components:\n",
-    "                label: str = components.get(ImageType.COLOR).stem\n",
-    "            else:\n",
-    "                label: str = [components.values()][0].stem\n",
-    "\n",
-    "            labelled_composites[label] = components\n",
-    "\n",
-    "        loaders: list[ImageCompositeLoader] = [\n",
-    "            loader_factory(label, components)\n",
-    "            for label, components in labelled_composites.items()\n",
-    "        ]\n",
-    "\n",
-    "        return loaders\n",
-    "\n",
-    "    return build_image_composite_loaders\n",
+    "# NOTE: Defines how components are labelled\n",
+    "def label_image_composite(components: Mapping[ImageType, Resource]) -> str:\n",
+    "    \"\"\"Labels a collection of image components.\"\"\"\n",
+    "    if ImageType.COLOR in components:\n",
+    "        label: str = components.get(ImageType.COLOR).stem\n",
+    "    else:\n",
+    "        label: str = [components.values()][0].stem\n",
+    "    return label\n",
     "\n",
     "\n",
     "def log_image_queries(\n",
@@ -238,14 +182,15 @@
     "    matches: list[ComponentMatch] = matcher(query_results)\n",
     "\n",
     "    # Step 4 - Create loaders from the matched resources\n",
-    "    builder = create_image_composite_builder()\n",
-    "    loaders: list[tuple[str, ImageCompositeLoader]] = builder(matches)\n",
+    "    builder = create_composite_builder(\n",
+    "        factory=create_image_composite_loader,\n",
+    "        labeller=label_image_composite,\n",
+    "    )\n",
     "\n",
-    "    logger.info(f\"loaders: {type(loaders)}\")\n",
+    "    loaders: dict[str, ImageCompositeLoader] = builder(matches)\n",
     "\n",
-    "    for loader in tqdm.tqdm(loaders, desc=\"loading images...\"):\n",
-    "        label, composite = loader()\n",
-    "        # composite: ImageComposite = loader()\n",
+    "    for label, loader in tqdm.tqdm(loaders.items(), desc=\"loading images...\"):\n",
+    "        composite = loader()\n",
     "\n",
     "\n",
     "# INVOKE MAIN\n",
