Add type aliases from camera and sensor ID. Replace image bundles with image composites.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,39 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/martin/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/kornia/feature/lightglue.py:44: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.\n",
-      "  @torch.cuda.amp.custom_fwd(cast_inputs=torch.float32)\n",
-      "\u001b[32m2024-10-10 15:01:32.682\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1mCategory: color, resources: 5458\u001b[0m\n",
-      "\u001b[32m2024-10-10 15:01:32.683\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m96\u001b[0m - \u001b[1m - Files:        5458\u001b[0m\n",
-      "\u001b[32m2024-10-10 15:01:32.684\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m97\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
-      "\u001b[32m2024-10-10 15:01:32.725\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1mCategory: range, resources: 5456\u001b[0m\n",
-      "\u001b[32m2024-10-10 15:01:32.726\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m96\u001b[0m - \u001b[1m - Files:        5456\u001b[0m\n",
-      "\u001b[32m2024-10-10 15:01:32.726\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m97\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
-      "\u001b[32m2024-10-10 15:01:32.778\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1mCategory: normal, resources: 5456\u001b[0m\n",
-      "\u001b[32m2024-10-10 15:01:32.779\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m96\u001b[0m - \u001b[1m - Files:        5456\u001b[0m\n",
-      "\u001b[32m2024-10-10 15:01:32.780\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_image_queries\u001b[0m:\u001b[36m97\u001b[0m - \u001b[1m - Directories:  0\u001b[0m\n",
-      "\u001b[32m2024-10-10 15:01:32.827\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1mloaders: <class 'dict'>\u001b[0m\n",
-      "loading images...: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5458/5458 [01:20<00:00, 67.79it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections.abc import Mapping\n",
     "from functools import partial\n",
@@ -51,6 +22,8 @@
     "\n",
     "import tqdm\n",
     "\n",
+    "from mynd.camera import CameraID\n",
+    "from mynd.collections import CameraGroup\n",
     "from mynd.image import (\n",
     "    Image,\n",
     "    ImageType,\n",
@@ -73,82 +46,42 @@
     "\n",
     "IMAGE_PATTERN: str = \"*.tiff\"\n",
     "\n",
-    "Resources = list[Resource]\n",
     "\n",
+    "def create_mockup_cameras() -> CameraGroup:\n",
+    "    \"\"\"Creates a mockup of cameras with corresponding sensors.\"\"\"\n",
+    "    \n",
+    "    cameras: list[CameraID] = [\n",
+    "        CameraID(0, \"PR_20100605_030049_596_LC16\"),\n",
+    "        CameraID(1, \"PR_20100605_030049_596_RM16\"),\n",
+    "        CameraID(2, \"PR_20100605_030050_576_LC16\"),\n",
+    "        CameraID(3, \"PR_20100605_030050_576_RM16\"),\n",
+    "        CameraID(4, \"PR_20100605_030051_609_LC16\"),\n",
+    "        CameraID(5, \"PR_20100605_030051_609_RM16\"),\n",
+    "    ]\n",
     "\n",
-    "def collect_image_resources(directories: dict, tags: dict) -> ResourceManager:\n",
-    "    \"\"\"Collects image resources and adds them to a manager.\"\"\"\n",
-    "    image_manager: ResourceManager = ResourceManager()\n",
+    "    sensors: list[SensorID] = [\n",
+    "        SensorID(0, \"stereo_left\"),\n",
+    "        SensorID(1, \"stereo_right\"),\n",
+    "    ]\n",
     "\n",
-    "    # Find file handles\n",
-    "    image_files: dict[ImageType, list[Path]] = {\n",
-    "        image_type: list_directory(directory, IMAGE_PATTERN)\n",
-    "        for image_type, directory in directories.items()\n",
+    "    cameras_to_sensors: dict[CameraID, SensorID] = {\n",
+    "        cameras[0]: sensors[0],\n",
+    "        cameras[1]: sensors[1],\n",
+    "        cameras[2]: sensors[0],\n",
+    "        cameras[3]: sensors[1],\n",
+    "        cameras[4]: sensors[0],\n",
+    "        cameras[5]: sensors[1],\n",
     "    }\n",
-    "\n",
-    "    # Create resources out of the file handles\n",
-    "    for image_type, files in image_files.items():\n",
-    "        resources: Resources = [\n",
-    "            create_resource(path) for path in files if path.exists()\n",
-    "        ]\n",
-    "\n",
-    "        if len(resources) == 0:\n",
-    "            logger.warning(f\"no resources for type: {image_type}\")\n",
-    "\n",
-    "        image_manager.add_resources(resources, tags=tags.get(image_type))\n",
-    "\n",
-    "    return image_manager\n",
-    "\n",
-    "\n",
-    "# NOTE: Defines how components are loaded\n",
-    "def create_image_composite_loader(\n",
-    "    components: dict[ImageType, Resource]\n",
-    ") -> ImageCompositeLoader:\n",
-    "    \"\"\"Creates an image composite loader from component sources.\"\"\"\n",
-    "\n",
-    "    def load_image_composite() -> ImageComposite:\n",
-    "        \"\"\"Loads an image composite from resources.\"\"\"\n",
-    "        image_components: dict[ImageType, Image] = {\n",
-    "            image_type: read_image(resource.handle).unwrap()\n",
-    "            for image_type, resource in components.items()\n",
-    "        }\n",
-    "        return ImageComposite(image_components)\n",
-    "\n",
-    "    return load_image_composite\n",
-    "\n",
-    "\n",
-    "# NOTE: Defines how components are labelled\n",
-    "def label_image_composite(components: Mapping[ImageType, Resource]) -> str:\n",
-    "    \"\"\"Labels a collection of image components.\"\"\"\n",
-    "    if ImageType.COLOR in components:\n",
-    "        label: str = components.get(ImageType.COLOR).stem\n",
-    "    else:\n",
-    "        label: str = [components.values()][0].stem\n",
-    "    return label\n",
-    "\n",
-    "\n",
-    "def log_image_queries(\n",
-    "    query_results: Mapping[ImageType, list[Resource]]\n",
-    ") -> None:\n",
-    "    \"\"\"Log some image query statistics.\"\"\"\n",
-    "    for category, resources in query_results.items():\n",
-    "        file_count: int = len(\n",
-    "            [resource for resource in resources if resource.is_file()]\n",
-    "        )\n",
-    "        dir_count: int = len(\n",
-    "            [resource for resource in resources if resource.is_directory()]\n",
-    "        )\n",
-    "\n",
-    "        logger.info(f\"Category: {category}, resources: {len(resources)}\")\n",
-    "        logger.info(f\" - Files:        {file_count}\")\n",
-    "        logger.info(f\" - Directories:  {dir_count}\")\n",
+    "    \n",
+    "    raise NotImplementedError\n",
     "\n",
     "\n",
     "def main() -> None:\n",
     "    \"\"\"Main entrypoint.\"\"\"\n",
     "\n",
     "    DATADIR: Path = Path(\"/home/martin/data\")\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    directories: dict[str, Path] = {\n",
     "        ImageType.COLOR: DATADIR\n",
     "        / Path(\"acfr_images_debayered/r23685bc_20100605_021022_debayered\"),\n",
@@ -187,10 +120,18 @@
     "        labeller=label_image_composite,\n",
     "    )\n",
     "\n",
-    "    loaders: dict[str, ImageCompositeLoader] = builder(matches)\n",
+    "    image_loaders: dict[str, ImageCompositeLoader] = builder(matches)\n",
     "\n",
-    "    for label, loader in tqdm.tqdm(loaders.items(), desc=\"loading images...\"):\n",
-    "        composite = loader()\n",
+    "    # Map image loaders to cameras\n",
+    "    filtered_loaders: dict[CameraID, ImageCompositeLoader] = {\n",
+    "        camera: image_loaders.get(camera) for camera in cameras \n",
+    "        if camera.label in image_loaders\n",
+    "    }\n",
+    "\n",
+    "    # TODO: Map loaders to cameras\n",
+    "    logger.info(f\"Cameras: {len(cameras)}\")\n",
+    "    logger.info(f\"Loaders: {len(image_loaders)}\")\n",
+    "    logger.info(f\"Filtered loaders: {len(filtered_loaders)}\")\n",
     "\n",
     "\n",
     "# INVOKE MAIN\n",
