Move camera database export to separate module. Update H5 image writers to new image composite type, and consolidate modules.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "def create_mockup_cameras() -> CameraGroup:\n",
     "    \"\"\"Creates a mockup of cameras with corresponding sensors.\"\"\"\n",
-    "    \n",
+    "\n",
     "    cameras: list[CameraID] = [\n",
     "        CameraID(0, \"PR_20100605_030049_596_LC16\"),\n",
     "        CameraID(1, \"PR_20100605_030049_596_RM16\"),\n",
@@ -72,7 +72,7 @@
     "        cameras[4]: sensors[0],\n",
     "        cameras[5]: sensors[1],\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    raise NotImplementedError\n",
     "\n",
     "\n",
@@ -80,8 +80,7 @@
     "    \"\"\"Main entrypoint.\"\"\"\n",
     "\n",
     "    DATADIR: Path = Path(\"/home/martin/data\")\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    directories: dict[str, Path] = {\n",
     "        ImageType.COLOR: DATADIR\n",
     "        / Path(\"acfr_images_debayered/r23685bc_20100605_021022_debayered\"),\n",
@@ -124,7 +123,8 @@
     "\n",
     "    # Map image loaders to cameras\n",
     "    filtered_loaders: dict[CameraID, ImageCompositeLoader] = {\n",
-    "        camera: image_loaders.get(camera) for camera in cameras \n",
+    "        camera: image_loaders.get(camera)\n",
+    "        for camera in cameras\n",
     "        if camera.label in image_loaders\n",
     "    }\n",
     "\n",
