Add metadata map to camera group. Update camera service calls for backend. Add exporting of camera metadata to database.

--- a/notebooks/export_camera_metadata.ipynb
+++ b/notebooks/export_camera_metadata.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "import polars as pl\n",
     "\n",
-    "from mynd.camera import Camera, Metadata\n",
+    "from mynd.camera import Camera, CameraID\n",
     "from mynd.collections import CameraGroup\n",
     "from mynd.io import read_data_frame\n",
     "from mynd.tasks.ingestion import map_metadata_to_cameras\n",
@@ -40,22 +40,21 @@
     ")\n",
     "\n",
     "\n",
-    "CameraID = Camera.Identifier\n",
     "GroupID = CameraGroup.Identifier\n",
     "\n",
     "\n",
     "def create_metadata_mockup(\n",
     "    data_frame: pl.DataFrame,\n",
-    ") -> dict[CameraID, Metadata]:\n",
+    ") -> dict[CameraID, Camera.Metadata]:\n",
     "    \"\"\"Create a bunch of camera metadata.\"\"\"\n",
     "\n",
-    "    camera_fields: dict[str, Metadata] = map_metadata_to_cameras(\n",
+    "    camera_fields: dict[str, Camera.Metadata] = map_metadata_to_cameras(\n",
     "        data_frame,\n",
     "        label_column=\"label\",\n",
     "        data_columns=[\"exposure\", \"exposure_logged\", \"timestamp\", \"invalid\"],\n",
     "    )\n",
     "\n",
-    "    camera_metadata: dict[CameraID, Metadata] = dict()\n",
+    "    camera_metadata: dict[CameraID, Camera.Metadata] = dict()\n",
     "    for index, (label, fields) in enumerate(camera_fields.items()):\n",
     "        identifier: CameraID = CameraID(index, label)\n",
     "        camera_metadata[identifier] = fields\n",
@@ -67,7 +66,7 @@
     "    \"\"\"Main entrypoint.\"\"\"\n",
     "\n",
     "    DATETIME: str = get_time_string()\n",
-    "    DEVICE: Path = Path(\"/home/martin/data\")\n",
+    "    DEVICE: Path = Path(\"/data/kingston_snv_01\")\n",
     "    SOURCE: Path = DEVICE / Path(\n",
     "        \"acfr_cameras_metadata/r23685bc_20100605_021022_camera_metadata.csv\"\n",
     "    )\n",
@@ -95,7 +94,7 @@
     "\n",
     "    data_frame: pl.DataFrame = read_data_frame(PATHS.get(\"input\")).unwrap()\n",
     "\n",
-    "    camera_metadata: dict[CameraID, Metadata] = create_metadata_mockup(\n",
+    "    camera_metadata: dict[CameraID, Camera.Metadata] = create_metadata_mockup(\n",
     "        data_frame\n",
     "    )\n",
     "\n",
