Add CLI command to ingest metadata bundles.

--- a/notebooks/export_camera_data_frame.ipynb
+++ b/notebooks/export_camera_data_frame.ipynb
@@ -38,31 +38,49 @@
     "CameraGroupID = CameraGroup.Identifier\n",
     "\n",
     "\n",
-    "def tabulate_camera_identifiers(identifiers: list[Camera.Identifier]) -> pl.DataFrame:\n",
+    "def tabulate_camera_identifiers(\n",
+    "    identifiers: list[Camera.Identifier],\n",
+    ") -> pl.DataFrame:\n",
     "    \"\"\"Converts a collection of camera identifiers to a data frame.\"\"\"\n",
-    "    return pl.DataFrame([\n",
-    "        {\"camera_key\": identifier.key, \"camera_label\": identifier.label} for identifier in identifiers\n",
-    "    ])\n",
+    "    return pl.DataFrame(\n",
+    "        [\n",
+    "            {\"camera_key\": identifier.key, \"camera_label\": identifier.label}\n",
+    "            for identifier in identifiers\n",
+    "        ]\n",
+    "    )\n",
     "\n",
     "\n",
-    "def tabulate_camera_references(references: CameraGroup.References) -> pl.DataFrame:\n",
+    "def tabulate_camera_references(\n",
+    "    references: CameraGroup.References,\n",
+    ") -> pl.DataFrame:\n",
     "    \"\"\"Converts a collection of camera references to a data frame.\"\"\"\n",
     "    entries: list[dict] = list()\n",
     "    for index, identifier in enumerate(references.identifiers):\n",
-    "        \n",
+    "\n",
     "        location: list | None = references.locations.get(identifier)\n",
     "        rotation: list | None = references.rotations.get(identifier)\n",
-    "        \n",
-    "        entry: dict = {\"camera_key\": identifier.key, \"camera_label\": identifier.label}\n",
+    "\n",
+    "        entry: dict = {\n",
+    "            \"camera_key\": identifier.key,\n",
+    "            \"camera_label\": identifier.label,\n",
+    "        }\n",
     "\n",
     "        if location:\n",
-    "            entry.update({\"longitude\": location[0], \"latitude\": location[1], \"height\": location[2]})\n",
+    "            entry.update(\n",
+    "                {\n",
+    "                    \"longitude\": location[0],\n",
+    "                    \"latitude\": location[1],\n",
+    "                    \"height\": location[2],\n",
+    "                }\n",
+    "            )\n",
     "\n",
     "        if rotation:\n",
-    "            entry.update({\"yaw\": rotation[0], \"pitch\": rotation[1], \"roll\": rotation[2]})\n",
+    "            entry.update(\n",
+    "                {\"yaw\": rotation[0], \"pitch\": rotation[1], \"roll\": rotation[2]}\n",
+    "            )\n",
     "\n",
     "        entries.append(entry)\n",
-    "        \n",
+    "\n",
     "    return pl.DataFrame(entries)\n",
     "\n",
     "\n",
@@ -70,7 +88,10 @@
     "    \"\"\"Converts a collection of camera metadata to a data frame.\"\"\"\n",
     "    entries: list[dict] = list()\n",
     "    for identifier, fields in metadata.fields.items():\n",
-    "        entry: dict = {\"camera_key\": identifier.key, \"camera_label\": identifier.label}\n",
+    "        entry: dict = {\n",
+    "            \"camera_key\": identifier.key,\n",
+    "            \"camera_label\": identifier.label,\n",
+    "        }\n",
     "        entry.update(fields)\n",
     "        entries.append(entry)\n",
     "\n",
@@ -81,23 +102,31 @@
     "    \"\"\"Process camera data from various sources.\"\"\"\n",
     "\n",
     "    data_frames: dict[str, pl.DataFrame] = {\n",
-    "        \"identifiers\": tabulate_camera_identifiers(cameras.attributes.identifiers),\n",
-    "        \"ref_estimates\": tabulate_camera_references(cameras.reference_estimates),\n",
+    "        \"identifiers\": tabulate_camera_identifiers(\n",
+    "            cameras.attributes.identifiers\n",
+    "        ),\n",
+    "        \"ref_estimates\": tabulate_camera_references(\n",
+    "            cameras.reference_estimates\n",
+    "        ),\n",
     "        \"ref_priors\": tabulate_camera_references(cameras.reference_priors),\n",
     "        \"metadata\": tabulate_camera_metadata(cameras.metadata),\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    # Join identifiers, reference estimates, and metadata\n",
     "    left: pl.DataFrame = data_frames.get(\"ref_estimates\")\n",
     "    for right in [data_frames.get(\"metadata\")]:\n",
-    "        left: pl.DataFrame = left.join(right, how=\"left\", on=[\"camera_key\", \"camera_label\"])\n",
+    "        left: pl.DataFrame = left.join(\n",
+    "            right, how=\"left\", on=[\"camera_key\", \"camera_label\"]\n",
+    "        )\n",
     "\n",
     "    # TODO: Add some fancy interpolation with reference priors\n",
     "    merged: pl.DataFrame = left.sort(by=\"timestamp\")\n",
-    "    merged: pl.DataFrame = merged.with_columns((-pl.col(\"height\")).alias(\"negative_height\"))\n",
+    "    merged: pl.DataFrame = merged.with_columns(\n",
+    "        (-pl.col(\"height\")).alias(\"negative_height\")\n",
+    "    )\n",
     "\n",
     "    return merged\n",
-    "    \n",
+    "\n",
     "\n",
     "def export_cameras_data_frame(destination: Path, cameras: CameraGroup) -> None:\n",
     "    \"\"\"Export cameras to a data frame.\"\"\"\n",
@@ -111,7 +140,7 @@
     "    logger.info(f\"Shape:   {processed_cameras.shape}\")\n",
     "    logger.info(f\"Columns: {processed_cameras.columns}\")\n",
     "    logger.info(\"\")\n",
-    "    \n",
+    "\n",
     "    write_result: Result = write_data_frame(destination, processed_cameras)\n",
     "    match write_result:\n",
     "        case Ok(path):\n",
@@ -122,7 +151,9 @@
     "\n",
     "def retrieve_target_group(target: str) -> Optional[CameraGroupID]:\n",
     "    \"\"\"Retrieves the target group from the backend.\"\"\"\n",
-    "    identifiers: list[CameraGroupID] = metashape.get_group_identifiers().unwrap()\n",
+    "    identifiers: list[CameraGroupID] = (\n",
+    "        metashape.get_group_identifiers().unwrap()\n",
+    "    )\n",
     "    mapping: dict[str, CameraGroupID] = {\n",
     "        identifier.label: identifier for identifier in identifiers\n",
     "    }\n",
@@ -134,15 +165,21 @@
     "\n",
     "    # r23685bc_20100605_021022, r23685bc_20120530_233021, r23685bc_20140616_225022\n",
     "    GROUP_LABEL: str = \"r23685bc_20120530_233021\"\n",
-    "    PROJECT: Path = Path(\"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\")\n",
-    "    DESTINATION: Path = Path(f\"/data/kingston_snv_01/georef_semantics_test/{GROUP_LABEL}_aligned_cameras.csv\")\n",
+    "    PROJECT: Path = Path(\n",
+    "        \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\"\n",
+    "    )\n",
+    "    DESTINATION: Path = Path(\n",
+    "        f\"/data/kingston_snv_01/georef_semantics_test/{GROUP_LABEL}_aligned_cameras.csv\"\n",
+    "    )\n",
     "\n",
     "    load_result: Result = metashape.load_project(PROJECT)\n",
     "    if load_result.is_err():\n",
     "        logger.error(load_result.err())\n",
     "\n",
     "    target: CameraGroupID = retrieve_target_group(GROUP_LABEL)\n",
-    "    camera_group: CameraGroup = metashape.camera_services.retrieve_camera_group(target).unwrap()\n",
+    "    camera_group: CameraGroup = metashape.camera_services.retrieve_camera_group(\n",
+    "        target\n",
+    "    ).unwrap()\n",
     "\n",
     "    export_cameras_data_frame(DESTINATION, camera_group)\n",
     "\n",
